# gumbel-mcts

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst
examples/: demo_gumbel_dense.py  demo_gumbel_sparse.py  demo_puct.py  demo_puct_vs_gumbel.py  demo_visual_gomoku.py  tictactoe.py
src/game_logic/: gomoku.py  tictactoe.py
src/gumbel_mcts/: __init__.py  gumbel_dense.py  gumbel_sparse.py  protocols.py  puct.py
src/kernels/: gumbel_dense_kernels.py  gumbel_sparse_kernels.py  puct_kernels.py
tests/: test_gumbel_dense.py  test_gumbel_sparse.py  test_puct.py
